{
  "version": 4,
  "terraform_version": "1.6.6",
  "serial": 17,
  "lineage": "fc24123f-e607-48cf-39d3-c7ce530f040b",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "NAT-GW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-005806ed7f70c5f4a",
            "arn": "arn:aws:ec2:ap-south-2:862066027316:elastic-ip/eipalloc-005806ed7f70c5f4a",
            "association_id": "eipassoc-09f069fbe980bb87e",
            "domain": "vpc",
            "id": "eipalloc-005806ed7f70c5f4a",
            "network_border_group": "ap-south-2",
            "network_interface": "eni-0a6e322dad51ade86",
            "private_dns": "ip-10-0-0-7.ap-south-2.compute.internal",
            "private_ip": "10.0.0.7",
            "public_dns": "ec2-18-61-151-210.ap-south-2.compute.amazonaws.com",
            "public_ip": "18.61.151.210",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "EIP_for_NAT"
            },
            "tags_all": {
              "Name": "EIP_for_NAT"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "public_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-008616ec4a2c6975e",
            "arn": "arn:aws:ec2:ap-south-2:862066027316:instance/i-03cb2bdb85fddd685",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-03cb2bdb85fddd685",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "hyderabad",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-059cfd1ffa0b01a17",
            "private_dns": "ip-10-0-0-10.ap-south-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.10",
            "public_dns": "ec2-18-61-65-42.ap-south-2.compute.amazonaws.com",
            "public_ip": "18.61.65.42",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-08cae066dab127250",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0552ba78191392080",
            "tags": {
              "Name": "pub-instance"
            },
            "tags_all": {
              "Name": "pub-instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0aacab55847c354e6"
            ]
          },
          "dependencies": [
            "aws_subnet.public_subnet",
            "aws_vpc.variable-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "first_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-2:862066027316:internet-gateway/igw-0f1f06e9e6a60d351",
            "id": "igw-0f1f06e9e6a60d351",
            "owner_id": "862066027316",
            "tags": {
              "Name": "MyIGW"
            },
            "tags_all": {
              "Name": "MyIGW"
            },
            "vpc_id": "vpc-01340ad457d590781"
          },
          "dependencies": [
            "aws_vpc.variable-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "First_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-005806ed7f70c5f4a",
            "association_id": "eipassoc-09f069fbe980bb87e",
            "connectivity_type": "public",
            "id": "nat-0e57b4f31b1b5d6ee",
            "network_interface_id": "eni-0a6e322dad51ade86",
            "private_ip": "10.0.0.7",
            "public_ip": "18.61.151.210",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0552ba78191392080",
            "tags": {
              "Name": "1stNATGateway"
            },
            "tags_all": {
              "Name": "1stNATGateway"
            }
          },
          "dependencies": [
            "aws_eip.NAT-GW",
            "aws_subnet.public_subnet",
            "aws_vpc.variable-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-2:862066027316:route-table/rtb-0d0d6c88586f2a887",
            "id": "rtb-0d0d6c88586f2a887",
            "owner_id": "862066027316",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0e57b4f31b1b5d6ee",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "PrivateRouteTable"
            },
            "tags_all": {
              "Name": "PrivateRouteTable"
            },
            "timeouts": null,
            "vpc_id": "vpc-01340ad457d590781"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.NAT-GW",
            "aws_nat_gateway.First_nat_gateway",
            "aws_subnet.public_subnet",
            "aws_vpc.variable-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-2:862066027316:route-table/rtb-086c35a32e56756e6",
            "id": "rtb-086c35a32e56756e6",
            "owner_id": "862066027316",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f1f06e9e6a60d351",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.0.0.0/28",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0e57b4f31b1b5d6ee",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "PublicRouteTable"
            },
            "tags_all": {
              "Name": "PublicRouteTable"
            },
            "timeouts": null,
            "vpc_id": "vpc-01340ad457d590781"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.NAT-GW",
            "aws_internet_gateway.first_igw",
            "aws_nat_gateway.First_nat_gateway",
            "aws_subnet.public_subnet",
            "aws_vpc.variable-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-2:862066027316:subnet/subnet-07b5a2b33161556ef",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-2b",
            "availability_zone_id": "aps2-az2",
            "cidr_block": "10.0.1.0/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07b5a2b33161556ef",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "862066027316",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_subnet"
            },
            "tags_all": {
              "Name": "private_subnet"
            },
            "vpc_id": "vpc-01340ad457d590781"
          },
          "dependencies": [
            "aws_vpc.variable-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-2:862066027316:subnet/subnet-0552ba78191392080",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-2a",
            "availability_zone_id": "aps2-az1",
            "cidr_block": "10.0.0.0/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0552ba78191392080",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "862066027316",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_subnet"
            },
            "tags_all": {
              "Name": "public_subnet"
            },
            "vpc_id": "vpc-01340ad457d590781"
          },
          "dependencies": [
            "aws_vpc.variable-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "variable-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-2:862066027316:vpc/vpc-01340ad457d590781",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-030ea12c52948ed12",
            "default_route_table_id": "rtb-02817eccdccf29315",
            "default_security_group_id": "sg-0aacab55847c354e6",
            "dhcp_options_id": "dopt-0d2790b19d30d1f4f",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-01340ad457d590781",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-02817eccdccf29315",
            "owner_id": "862066027316",
            "tags": {
              "Name": "var-vpc"
            },
            "tags_all": {
              "Name": "var-vpc"
            }
          }
        }
      ]
    }
  ]
}